# FlashScreen

./: README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js
scripts/: download-ffmpeg.ps1
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: .gitignore
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: files.rs  mod.rs  recording.rs  settings.rs
src-tauri/src/recording/: ffmpeg.rs  mod.rs  state.rs
src/components/: MainPanel.tsx
src/components/files/: FilesPanel.tsx  FilesView.tsx  index.ts
src/components/layout/: AppLayout.tsx  BottomBar.tsx  ControlBar.tsx  MainContent.tsx  MainLayout.tsx  PanelHeader.tsx  PreviewArea.tsx  Sidebar.tsx  StatusBar.tsx  TitleBar.tsx  index.ts
src/components/recording/: ModeSelector.tsx  RecordButton.tsx  RecordingView.tsx  SourceToggle.tsx  index.ts
src/components/settings/: SettingsPanel.tsx  SettingsView.tsx
src/components/ui/: Button.tsx  Card.tsx  Toggle.tsx  Tooltip.tsx  index.ts
src/components/workspace/: PreviewPanel.tsx  PropertiesPanel.tsx  RecordingControls.tsx  Workspace.tsx  index.ts
src/i18n/: index.ts
src/i18n/locales/: en-US.json  zh-CN.json
src/services/: files.ts  index.ts  recording.ts  settings.ts
src/stores/: filesStore.ts  index.ts  recordingStore.ts  settingsStore.ts  uiStore.ts
src/styles/: globals.css
src/types/: files.ts  index.ts  recording.ts  settings.ts
src/utils/: format.ts  index.ts
