[package]
name = "flashscreen"
version = "1.0.0"
description = "A fast and minimal screen recorder for Windows"
authors = ["FlashScreen Team"]
edition = "2021"

[lib]
name = "flashscreen_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
tauri-plugin-global-shortcut = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
dirs = "5.0"
chrono = "0.4"

[profile.release]
lto = true
opt-level = "s"
strip = true
